# PyDocEnhancer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
docs/: index.md  usage.md
examples/: example.py
pydocenhancer/: __version__.py  cli.py  core.py
pydocenhancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
